Stop passing '-q' to ssh by default (issue #32)

--- a/ChangeLog
+++ b/ChangeLog
@@ -17,6 +17,8 @@ XXXX-XX-XX Andrew McNabb <amcnabb at mcnabbs.org>
 	    cause more problems than it's worth.
 	  - Added the ability to set multiple hosts with a single -H flag
 	    (issue #26). Thanks to ilya@sukhanov.net for the patch.
+	  - Stopped passing "-q" to ssh by default (this masked error messages
+	    and reduced usability).
 	  - Other minor fixes
 2010-02-26 Andrew McNabb <amcnabb at mcnabbs.org>
 	* Version 2.1.1
