--- a/ChangeLog
+++ b/ChangeLog
@@ -21,6 +21,7 @@ XXXX-XX-XX Andrew McNabb <amcnabb at mcnabbs.org>
 	    and reduced usability).
 	  - Removed automatic reading from stdin (deprecated in version 2.1).
 	    Please use the "-I" option instead.
+	  - Added meaningful exit status codes (issue #30).
 	  - Other minor fixes
 2010-02-26 Andrew McNabb <amcnabb at mcnabbs.org>
 	* Version 2.1.1
