remove an error in the man page (issue #55)

--- a/man/man1/pssh.1
+++ b/man/man1/pssh.1
@@ -80,7 +80,7 @@ If multiple host files are given (the
 .B \-h
 option is used more than once), then pssh behaves as though these files
 were concatenated together.
-If a host is specified specified multiple times, then pssh will connect the
+If a host is specified multiple times, then pssh will connect the
 given number of times.
 
 .TP
